// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table usuario {
  id integer [primary key]
  nombre varchar [unique]
  correo varchar [unique, not null]
  password_hash varchar [not null]
  id_tipo_identificacion integer
  tipo_identificacion varchar // Relación, pero también se guarda el id
  numero_identificacion varchar
  apellido varchar
  fecha_nacimiento date
  id_pais integer
  created_at timestamp
  updated_at timestamp
  // Relaciones
  // roles: muchos a muchos con rol (usuario_rol)
  // tarjetas: uno a muchos con tarjeta
}

Table usuario_rol {
  usuario_id integer [not null, ref: > usuario.id]
  rol_id integer [not null, ref: > rol.id]
  // PK compuesta
  primary key (usuario_id, rol_id)
}

Table rol {
  id integer [primary key]
  nombre varchar [unique, not null]
}

Table tarjeta {
  id integer [primary key]
  numero varchar [not null]
  nombre_titular varchar [not null]
  fecha_inicio date
  fecha_vencimiento date [not null]
  cvv varchar [not null]
  usuario_id integer [not null, ref: > usuario.id]
  id_marca integer [ref: > marca_tarjeta.id]
  id_tipo integer [ref: > tipo_tarjeta.id]
}

Table marca_tarjeta {
  id integer [primary key]
  nombre varchar(30) [unique, not null]
}

Table tipo_tarjeta {
  id integer [primary key]
  nombre varchar(20) [unique, not null]
}

Table paises {
  id integer [primary key]
  nombre varchar(100) [unique, not null]
}

Table tipo_identificacion {
  id integer [primary key]
  nombre varchar(50) [unique, not null]
}

Table reserva {
  id integer [primary key]
  id_propiedad integer
  id_inquilino integer
  id_usuario_carga integer
  cantidad_personas integer
  monto_pagado 
  monto_total
  id_chat integer
  id_estado interger 
  fecha_inicio date
  fecha_fin date
  created_at timestamp
  updated_at timestamp
}

Table propiedad {
  id integer [primary key]
  nombre varchar [unique, not null]
  descripcion varchar [not null]
  entre_calles varchar [not null]
  calle varchar [not null]
  numero integer [not null]
  piso varchar
  depto varchar
  huespedes integer [not null]
  ambientes integer [not null]
  banios integer [not null]
  cocheras integer [not null]
  precioNoche real [not null]
  codigoAcceso varchar [not null]
  is_habilitada boolean [not null]
  id_pol_reserva integer [ref: > politicas_reserva.id]
  id_tipo integer [ref: > propiedad_tipos.id]
  id_ciudad integer [ref: > ciudades.id]
  created_at timestamp
  updated_at timestamp
  delete_at timestamp
}

Table propiedad_tipos {
  id integer [primary key]
  tipo varchar [unique, not null]
}

Table politicas_reserva {
  id integer [primary key]
  label varchar [unique, not null]
  porcentaje real [unique, not null]
}

Table provincias {
  id integer [primary key]
  nombre varchar [unique, not null]
}

Table ciudades {
  id integer [primary key]
  id_provincia integer [ref: > provincias.id]
  nombre varchar [not null]
}

Table calificacion_user {
  id integer [primary key]
  evaluado_id integer [not null, ref: > usuario.id]
  evaluador_id integer [not null, ref: > usuario.id]
  puntaje integer
  comentario text
  created_at timestamp
}

Table calificacion_prop {
  id integer [primary key]
  propiedad_id integer [not null] // FK a propiedad
  usuario_id integer [not null]   // quién califica
  puntaje integer                 // de 1 a 5, por ejemplo
  puntaje integer                 // de 1 a 5, por ejemplo
  puntaje integer                 // de 1 a 5, por ejemplo
  puntaje integer                 // de 1 a 5, por ejemplo
  puntaje integer                 // de 1 a 5, por ejemplo
  comentario text
  created_at timestamp
}

Table chat {
  id integer [primary key]
  mensaje_id integer
  emisor_id integer
  receptor_id integer
}

Table mensaje {
  id integer [primary key]
  chat_id integer [not null, ref: > chat.id]
  emisor_id integer [ref: > usuario.id]
  receptor_id integer [ref: > usuario.id]
  hora timestamp
  texto text
}

Table imagen_propiedad {
  id integer [primary key]
  propiedad_id integer [not null, ref: > propiedad.id]
  url text
}

Table imagen {
  id integer [primary key]
  url text [not null]
}

// Relaciones adicionales
// usuario_rol: muchos a muchos entre usuario y rol
// usuario-tarjeta: uno a muchos (usuario_id en tarjeta)
// tarjeta-marca_tarjeta: muchos a uno (id_marca)
// tarjeta-tipo_tarjeta: muchos a uno (id_tipo)
// propiedad-politicas_reserva: muchos a uno (id_pol_reserva)
// propiedad-propiedad_tipos: muchos a uno (id_tipo)
// propiedad-ciudades: muchos a uno (id_ciudad)
// ciudades-provincias: muchos a uno (id_provincia)
// usuario-paises: muchos a uno (id_pais)
// usuario-tipo_identificacion: muchos a uno (id_tipo_identificacion)
